--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html
 h1{
     color:blue;
     font-family: sans-serif;
-
+    font-display: bold;
 }
 p{
     color:rgb(0, 0, 109);
@@ -17,7 +17,7 @@ p{
 }
 .button1
 {
-    background-color: green;
+    background-color: rgb(0, 255, 0);
     font-size: larger;
     cursor: pointer;
     border-color: black;
@@ -40,4 +40,5 @@ p{
     height: 40px;
     width: 40px;
     position: relative;
+    bottom: 40px;
 }
